[tool.poetry]
name = "example-streamlit"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "example_streamlit"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
watchdog = "^3.0.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
